@@ -7,10 +7,10 @@ CHANGES BETWEEN 2.10.4 and 2.11.0
     to  enable   it  besides  the   `T1_CONFIG_OPTION_OLD_ENGINE`  and
     `CFF_CONFIG_OPTION_OLD_ENGINE` options.
 
-  - A  new rendering  module has  been added  to create  16-bit Signed
+  - A  new rendering  module has  been  added to  create 8-bit  Signed
     Distance Field (SDF)  bitmaps for both outline  and bitmap glyphs.
     The new  rendering mode is called  `FT_RENDER_MODE_SDF`, the pixel
-    mode is `FT_PIXEL_MODE_GRAY16`, and  the corresponding raster flag
+    mode is  `FT_PIXEL_MODE_GRAY8`, and the corresponding  raster flag
     is `FT_RASTER_FLAG_SDF`.
 
     This work was Anuj Verma's GSoC 2020 project.
@@ -71,6 +71,10 @@ CHANGES BETWEEN 2.10.4 and 2.11.0
     comes from.  See file `docs/DEBUG` for more information.
 
     This work was Priyesh Kumar's GSoC 2020 project.
+
+  - Improved Meson build support for the library.
+
+  - Meson support to build The FreeType demo programs.
 
   - `ttdebug` didn't show changed point coordinates (bug introduced in
     version 2.10.3).
